@@ -542,9 +542,12 @@ public class DownloadListPage extends Control implements DecoratorPage, VersionP
                         ModTranslations.Mod mod = ModTranslations.getTranslationsByRepositoryType(getSkinnable().repository.getType()).getModByCurseForgeId(dataItem.getSlug());
                         content.setTitle(mod != null && I18n.isUseChinese() ? mod.getDisplayName() : dataItem.getTitle());
                         content.setSubtitle(dataItem.getDescription());
-                        content.getTags().setAll(dataItem.getCategories().stream()
-                                .map(category -> getSkinnable().getLocalizedCategory(category))
-                                .collect(Collectors.toList()));
+                        content.getTags().setAll(
+                                dataItem.getCategories().stream()
+                                        .map(category -> getSkinnable().getLocalizedCategory(category))
+                                        .map(TwoLineListItem::createTagLabel)
+                                        .toList()
+                        );
 
                         if (StringUtils.isNotBlank(dataItem.getIconUrl())) {
                             imageView.imageProperty().bind(FXUtils.newRemoteImage(dataItem.getIconUrl(), 40, 40, true, true));
