@@ -230,7 +230,8 @@ public class DownloadPage extends Control implements DecoratorPage {
                 content.setSubtitle(getSkinnable().addon.getDescription());
                 content.getTags().setAll(getSkinnable().addon.getCategories().stream()
                         .map(category -> getSkinnable().page.getLocalizedCategory(category))
-                        .collect(Collectors.toList()));
+                        .map(TwoLineListItem::createTagLabel)
+                        .toList());
                 descriptionPane.getChildren().add(content);
 
                 if (getSkinnable().mod != null) {
@@ -355,7 +356,8 @@ public class DownloadPage extends Control implements DecoratorPage {
                 content.setSubtitle(addon.getDescription());
                 content.getTags().setAll(addon.getCategories().stream()
                         .map(page::getLocalizedCategory)
-                        .collect(Collectors.toList()));
+                        .map(TwoLineListItem::createTagLabel)
+                        .toList());
 
                 if (StringUtils.isNotBlank(addon.getIconUrl())) {
                     imageView.imageProperty().bind(FXUtils.newRemoteImage(addon.getIconUrl(), 40, 40, true, true));
@@ -389,15 +391,15 @@ public class DownloadPage extends Control implements DecoratorPage {
 
                     switch (dataItem.getVersionType()) {
                         case Alpha:
-                            content.getTags().add(i18n("mods.channel.alpha"));
+                            content.addTag(i18n("mods.channel.alpha"));
                             graphicPane.getChildren().setAll(SVG.ALPHA_CIRCLE.createIcon(Theme.blackFill(), 24));
                             break;
                         case Beta:
-                            content.getTags().add(i18n("mods.channel.beta"));
+                            content.addTag(i18n("mods.channel.beta"));
                             graphicPane.getChildren().setAll(SVG.BETA_CIRCLE.createIcon(Theme.blackFill(), 24));
                             break;
                         case Release:
-                            content.getTags().add(i18n("mods.channel.release"));
+                            content.addTag(i18n("mods.channel.release"));
                             graphicPane.getChildren().setAll(SVG.RELEASE_CIRCLE.createIcon(Theme.blackFill(), 24));
                             break;
                     }
@@ -405,22 +407,22 @@ public class DownloadPage extends Control implements DecoratorPage {
                     for (ModLoaderType modLoaderType : dataItem.getLoaders()) {
                         switch (modLoaderType) {
                             case FORGE:
-                                content.getTags().add(i18n("install.installer.forge"));
+                                content.addTag(i18n("install.installer.forge"));
                                 break;
                             case CLEANROOM:
-                                content.getTags().add(i18n("install.installer.cleanroom"));
+                                content.addTag(i18n("install.installer.cleanroom"));
                                 break;
                             case NEO_FORGED:
-                                content.getTags().add(i18n("install.installer.neoforge"));
+                                content.addTag(i18n("install.installer.neoforge"));
                                 break;
                             case FABRIC:
-                                content.getTags().add(i18n("install.installer.fabric"));
+                                content.addTag(i18n("install.installer.fabric"));
                                 break;
                             case LITE_LOADER:
-                                content.getTags().add(i18n("install.installer.liteloader"));
+                                content.addTag(i18n("install.installer.liteloader"));
                                 break;
                             case QUILT:
-                                content.getTags().add(i18n("install.installer.quilt"));
+                                content.addTag(i18n("install.installer.quilt"));
                                 break;
                         }
                     }
